SERVER-82736 Fix sbe::UnwindStage yield handling to not use freed memory